--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <meta property="og:image" content="https://www.berdigitall.com.br/images/preview.jpg">
     
     <!-- Favicon -->
-    <link rel="icon" href="imagens/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="imagens/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="imagens/android-chrome-192x192.png">
-    <link rel="apple-touch-icon" href="imagens/apple-touch-icon.png">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="manifest" href="site.webmanifest">
     
     <!-- Fontes -->
@@ -47,7 +47,7 @@
     <header>
         <div class="header-container">
             <a href="#inicio" aria-label="Ir para o início">
-                <img src="imagens/logo19550-removebg-preview.png" alt="Ber Digitall" class="logo" loading="lazy">
+                <img src="logo19550-removebg-preview.png" alt="Ber Digitall" class="logo" loading="lazy">
             </a>
             <button class="mobile-menu-btn" id="mobile-menu-btn" aria-label="Menu mobile" aria-expanded="false">
                 <i class="fas fa-bars"></i>
