--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <p>Trabalho remotamente e me orgulho de oferecer um atendimento personalizado, entendendo as necessidades de cada cliente para criar a solução perfeita para o seu negócio.</p>
             </div>
             <div class="about-image">
-                <img src="imagens/imagemtiago.jpeg" width="500" height="500" alt="Tiago Bernardes, fundador da Ber Digitall" loading="lazy">
+                <img src="imagemtiago.jpeg" width="500" height="500" alt="Tiago Bernardes, fundador da Ber Digitall" loading="lazy">
             </div>
         </div>
     </section>
@@ -138,7 +138,7 @@
                     <p class="testimonial-author">Daniele Lopes - Stúdio Dani Hair</p>
                 </div>
                 <div class="testimonial-slide">
-                    <img src="imagens/imagemjessicapets.png" alt="Jéssica" class="testimonial-image" loading="lazy">
+                    <img src="imagemjessicapets.png" alt="Jéssica" class="testimonial-image" loading="lazy">
                     <p class="testimonial-text">"Precisava urgentemente de um site para minha loja de pet shop recém inaugurada. O Tiago e a Ber Digitall superaram minhas expectativas e muitos clientes estão me encontrando pelo site."</p>
                     <p class="testimonial-author">Jéssica - Pet Shop Jéssica Pets</p>
                 </div>
@@ -175,7 +175,7 @@
         </div>
         <div class="portfolio-grid">
             <div class="portfolio-item">
-                <img src="imagens/imagemjessicapets.png" alt="Site Jéssica Pets" class="portfolio-image" loading="lazy">
+                <img src="imagemjessicapets.png" alt="Site Jéssica Pets" class="portfolio-image" loading="lazy">
                 <div class="portfolio-info">
                     <h3>Jéssica Pets</h3>
                     <p>Site completo que mostra o pet shop da Jéssica recém inaugurado em São Miguel Paulista.</p><br>
@@ -183,21 +183,21 @@
                 </div>
             </div>
             <div class="portfolio-item">
-                <img src="imagens/imagemjessicapets.png" alt="Site Amor de Apple" class="portfolio-image" loading="lazy">
+                <img src="imagemjessicapets.png" alt="Site Amor de Apple" class="portfolio-image" loading="lazy">
                 <div class="portfolio-info">
                     <h3>Amor de Apple</h3>
                     <p>Site completo demonstrando a empresa Amor de Aplle, arte pura em criação de maçãs do amor e algodões doces gourmet que encantam à cada evento.</p>
                 </div>
             </div>
             <div class="portfolio-item">
-                <img src="imagens/imagemjessicapets.png" alt="Site Atemóia Store" class="portfolio-image" loading="lazy">
+                <img src="imagemjessicapets.png" alt="Site Atemóia Store" class="portfolio-image" loading="lazy">
                 <div class="portfolio-info">
                     <h3>Atemóia Store</h3>
                     <p>Site criado para um afiliado do Mercado Livre que vende um mix de produtos por links de venda.</p>
                 </div>
             </div>
             <div class="portfolio-item">
-                <img src="imagens/imagemjessicapets.png" alt="Site Stúdio Dani Hair" class="portfolio-image" loading="lazy">
+                <img src="imagemjessicapets.png" alt="Site Stúdio Dani Hair" class="portfolio-image" loading="lazy">
                 <div class="portfolio-info">
                     <h3>Stúdio Dani Hair</h3>
                     <p>Site criado para uma empreendedora cabeleireira com mais de 15 anos de experiência transformando as vidas de muitas mulheres.</p>
@@ -234,7 +234,7 @@
         <div class="contact-form">
             <form id="contactForm" action="https://formsubmit.co/ber.digitall@gmail.com" method="POST">
                 <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_next" value="https://berdigitall.vercel.app/obrigado.html">
+                <input type="hidden" name="_next" value="https://github.com/ber-digitall/berdigitallobrigado.html">
                 <input type="hidden" name="_template" value="table">
                 <input type="text" name="_honey" style="display:none">
                 
@@ -268,7 +268,7 @@
     <footer>
         <div class="footer-container">
             <a href="#inicio" aria-label="Ir para o início">
-                <img src="imagens/logo19550-removebg-preview.png" alt="Ber Digitall" class="footer-logo" loading="lazy">
+                <img src="logo19550-removebg-preview.png" alt="Ber Digitall" class="footer-logo" loading="lazy">
             </a>
             <div class="footer-links">
                 <a href="#inicio">Início</a>
