--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <div class="contact-form">
             <form id="contactForm" action="https://formsubmit.co/ber.digitall@gmail.com" method="POST">
                 <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_next" value="https://ber-digitall.github.io/obrigado.html">
+                <input type="hidden" name="_next" value="https://ber-digitall.github.io/berdigitall/obrigado.html">
                 <input type="hidden" name="_template" value="table">
                 <input type="text" name="_honey" style="display:none">
                 
